--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
   </head>
   <body>
     <nav class="menu">
+      <ul>
+        <li>Accueil</li>
+        <li>Gallerie</li>
+        <li>Contact</li>
+      </ul>
     </nav>
     <div id="container">
+      <h1>Bruno Sanchez - Electricien du coin</h1>
       <div class="prez">
+        <h2>Electricien à Lesquin</h2>
+        <p>Fort d’une expérience de plus de 20 ans en tant qu’ouvrier électricien sur Nantes, puis chargé d’affaires
+           dans une grande entreprise Nantaise, Patryck CHAUMET décide en 2006, de créer l’entreprise CHAUMET Patryck
+           Electricité.<br>
+
+           Chaumet Patryck est une entreprise d'électricité générale sur Nantes et périphérie, spécialisée dans la
+           rénovation des installations électriques, la remise aux normes, le chauffage électrique et l’éclairage.<br>
+
+           Notre objectif en tant qu'électricien à Nantes et environs est de proposer à ses clients des prestations
+           de qualité, de conseils, le respect et la garantie des normes du métier, la NFC 15-100, confirmées par la
+           qualification QUALIFELEC certifiée Mention économie d'énergie (vous permettant de pouvoir obtenir un crédit
+           d'impôt).<br>
+
+           Tous nos devis sont détaillés et personnalisés : nous réalisons une analyse de votre demande pour vous
+           apporter la réponse la plus adaptée à vos contraintes (budget etc) et à vos besoins. Grâce à l'expertise de
+           Chaumet Patryck, électricien à Nantes, quels que soient vos contraintes, nous saurons vous apporter une
+           solution.</p>
       </div>
       <div class="others">
       </div>
