index.html fini

--- a/index.html
+++ b/index.html
@@ -17,24 +17,22 @@
       <h1>Bruno Sanchez - Electricien du coin</h1>
       <div class="prez">
         <h2>Electricien à Lesquin</h2>
-        <p>Fort d’une expérience de plus de 20 ans en tant qu’ouvrier électricien sur Nantes, puis chargé d’affaires
-           dans une grande entreprise Nantaise, Patryck CHAUMET décide en 2006, de créer l’entreprise CHAUMET Patryck
-           Electricité.<br>
+           <p>Fort d’une expérience de plus de 20 ans en tant qu’ouvrier électricien sur Lesquin, puis chargé d’affaires
+           dans une grande entreprise, j'ai décide en 2006, de créer l’entreprise SANCHEZ Bruno
+           Electricité.</p>
 
-           Chaumet Patryck est une entreprise d'électricité générale sur Nantes et périphérie, spécialisée dans la
-           rénovation des installations électriques, la remise aux normes, le chauffage électrique et l’éclairage.<br>
+           <p>SANCHEZ Bruno est une entreprise d'électricité générale sur Lesquin et périphérie, spécialisée dans la
+           rénovation des installations électriques, la remise aux normes, le chauffage électrique et l’éclairage.</p>
 
-           Notre objectif en tant qu'électricien à Nantes et environs est de proposer à ses clients des prestations
+           <p>Mon objectif en tant qu'électricien à Lesquin et environs est de proposer à mes clients des prestations
            de qualité, de conseils, le respect et la garantie des normes du métier, la NFC 15-100, confirmées par la
            qualification QUALIFELEC certifiée Mention économie d'énergie (vous permettant de pouvoir obtenir un crédit
-           d'impôt).<br>
+           d'impôt).</p>
 
-           Tous nos devis sont détaillés et personnalisés : nous réalisons une analyse de votre demande pour vous
+           <p>Tous mes devis sont détaillés et personnalisés : je réalisons une analyse de votre demande pour vous
            apporter la réponse la plus adaptée à vos contraintes (budget etc) et à vos besoins. Grâce à l'expertise de
-           Chaumet Patryck, électricien à Nantes, quels que soient vos contraintes, nous saurons vous apporter une
+           SANCHEZ Bruno, électricien à Lesquin, quels que soient vos contraintes, je saurai vous apporter une
            solution.</p>
-      </div>
-      <div class="others">
       </div>
     </div>
   </body>
