ajout liens menu

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Challenge_groupe: accueil</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <nav class="menu">
       <ul>
-        <li>Accueil</li>
-        <li>Gallerie</li>
-        <li>Contact</li>
+        <li href="index.html">Accueil</li>
+        <li href="work.html">Gallerie</li>
+        <li href="contact.html">Contact</li>
       </ul>
     </nav>
     <div id="container">
