--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <nav class="menu">
       <ul>
-        <li href="index.html">Accueil</li>
-        <li href="work.html">Gallerie</li>
-        <li href="contact.html">Contact</li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="work.html">Gallerie</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <div id="container">
