--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
 		        <li>Gallerie</li>
 		        <li>Contact</li>
 		      </ul>
-		</nav>	
+		</nav>
 
-		<div class="corps">
+		<div class="container">
 
 				<h1>Contact</h1>
-							
+
 						<nav class="firstmap">
 							<p>
 								Siège social:<br>
@@ -35,10 +35,10 @@
 								44000 NANTES
 							</p>
 							<!--insertion map-->
-						</nav>	
+						</nav>
 						<nav class="telephone">
 							Tél : 02.40.97.36.79 - Fax : 02.51.71.87.69
-							
+
 						</nav>
 		</div>
 
