liens contact.html

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
 <body>
 		<nav class="menu">
 		      <ul>
-		        <li>Accueil</li>
-		        <li>Gallerie</li>
-		        <li>Contact</li>
+		        <li><a href="index.html">Accueil</a></li>
+		        <li><a href="work.html">Gallerie</a></li>
+		        <li><a href="contact.html">Contact</a></li>
 		      </ul>
 		</nav>
 
-		<div class="container">
+		<div id="container">
 
 				<h1>Contact</h1>
 
