--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 <body>
 		<nav class="menu">
 		      <ul>
-		        <li>Accueil</li>
-		        <li>Gallerie</li>
-		        <li>Contact</li>
+		        <li><a href="index.html">Acceuil</a></li>
+		        <li><a href="work.html">Gallerie</a></li>
+		        <li><a href="contact.html">Contact</a></li>
 		      </ul>
 		</nav>	
 
