--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		<div class="corps">
 
 				<h1>Contact</h1>
-							
+					<div class="box">	
 						<nav class="firstmap">
 							<p>
 								Siège social:<br>
@@ -35,7 +35,8 @@
 								44000 NANTES
 							</p>
 							<!--insertion map-->
-						</nav>	
+						</nav>
+					</div>	
 						<nav class="telephone">
 							Tél : 02.40.97.36.79 - Fax : 02.51.71.87.69
 							
