--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,7 @@
 <body>
 		<nav class="menu">
 		      <ul>
-<<<<<<< HEAD
-		        <li><a href="index.html">Acceuil</a></li>
-=======
 		        <li><a href="index.html">Accueil</a></li>
->>>>>>> d5abdb0136acb93fce7e0295c64fe4bd31754f7a
 		        <li><a href="work.html">Gallerie</a></li>
 		        <li><a href="contact.html">Contact</a></li>
 		      </ul>
@@ -22,36 +18,32 @@
 		<div id="container">
 
 				<h1>Contact</h1>
-<<<<<<< HEAD
 					<div class="box">	
-=======
 
->>>>>>> d5abdb0136acb93fce7e0295c64fe4bd31754f7a
-						<nav class="firstmap">
+						<div class="firstmap">
 							<p>
 								Siège social:<br>
 								37 rue du Vallon de Mocrat<br>
 								44190 CLISSON
 							</p>
 							<!--insertion map-->
-						</nav>
+						</div>
 
-						<nav class="scndmap">
+						<div class="scndmap">
 							<p>
 								Agence commerciale :<br>
 							 	Immeuble Acropole 2 rue Crucy<br>
 								44000 NANTES
 							</p>
 							<!--insertion map-->
-						</nav>
-<<<<<<< HEAD
+						</div>
 					</div>	
-=======
->>>>>>> d5abdb0136acb93fce7e0295c64fe4bd31754f7a
-						<nav class="telephone">
+
+
+						<div class="telephone">
 							Tél : 02.40.97.36.79 - Fax : 02.51.71.87.69
 
-						</nav>
+						</div>
 		</div>
 
 </body>
