--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
         <span>Iusto sed inventore, delectus molestias similique maiores. Placeat porro aperiam repellat dolore error temporibus voluptas unde at quasi, ea perferendis laudantium ipsam. Odio commodi qui, debitis tempore tempora illo harum.</span>
     </P>
     <p class="p2">
-        <span>Architecto beatae assumenda quisquam dicta ducimus excepturi, odit at fugit quod, saepe consectetur perferendis error non ad ea commodi, sunt recusandae deserunt. Deleniti accusantium perferendis itaque eaque eligendi natus, tempore!</span>
+        <span>Architcto beatae assumenda quisquam dicta ducimus excepturi, odit at fugit quod, saepe consectetur perferendis error non ad ea commodi, sunt recusandae deserunt. Deleniti accusantium perferendis itaque eaque eligendi natus, tempore!</span>
         <span>Recusandae commodi ad perspiciatis consectetur, corporis at similique doloremque expedita, praesentium atque, temporibus tempore. Perferendis ipsa, quo praesentium minima facilis nesciunt. Distinctio necessitatibus et, aperiam eligendi fugit nesciunt, quod dignissimos.</span>
         <span>Fugit ullam itaque, unde maiores, optio hic, accusamus, neque a quia magnam perspiciatis. Earum aliquam optio nulla qui, inventore, eum impedit atque fuga ratione quia non asperiores, deleniti est repudiandae!</span>
         <span>Cupiditate voluptatum excepturi atque cumque ratione iste quasi id, asperiores reprehenderit dignissimos rem, laboriosam, inventore provident exercitationem totam nostrum. Dicta officia placeat eveniet fugit accusantium enim exercitationem earum pariatur explicabo.</span>
