--- a/work.html
+++ b/work.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="boxmenu">
+        <nav class="menu">
+              <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="work.html">Gallerie</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+        </nav>
+    </div>
+
     <div>
     <P class="p1">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit nam ipsam ea, commodi. Sed, possimus aspernatur odit harum accusantium fuga in nihil. Possimus amet illum, incidunt dolore libero explicabo vero.</span>
